fix: spacing on the header

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
 }
 
 .donate-container {
-  margin-left: auto;
   width: 200px;
   height: 50px;
 
